# opencode-openbe-benchmark

./: .env.example  .gitignore  README.md  RESULTS.md  opencode.json  pyproject.toml  run_benchmark.sh
.opencode/plugins/autobe/: index.ts  package.json
test_results/opencode_plugin/: test_outcomes.csv
tests/opencode_plugin/: __init__.py  chart_generator.py  conftest.py  reporter.py  test_autobe_plugin.py
